script: implement pointer events
Remaining failures are due to the missing implementation of
the pointer capture and pointer lock APIs, as well as:

Requires User Activation support:
/html/user-activation/activation-trigger-pointerevent.html?mouse

Blocked on https://github.com/servo/servo/issues/41227 :
/pointerevents/compat/pointerevent_mouse-pointer-on-scrollbar.html

Requires persistentDeviceId:
/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-event.tentative.html
/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-mouse-event.tentative.html

Requires pointerenter, pointerover, pointerout, pointerleave events:
/pointerevents/pointerevent_pointerId_scope.html

Requires pointerrawupdate event:
/pointerevents/pointerevent_pointerrawupdate.html
/pointerevents/pointerevent_pointerrawupdate.https.html

Consider implementing non-standard attributes toElement and fromElement:
See https://w3c.github.io/pointerevents/#attributes-and-default-actions

Fails because the pointerId is always 0 for pointermove, maybe caused by commit 7b00b54ee83 :
/pointerevents/pointerevent_pointermove_isprimary_same_as_pointerdown.html?touch
https://github.com/servo/servo/issues/41250

Signed-off-by: webbeef <me@webbeef.org>

--- a/tests/wpt/meta/html/user-activation/activation-trigger-pointerevent.html.ini
+++ b/tests/wpt/meta/html/user-activation/activation-trigger-pointerevent.html.ini
@@ -5,12 +5,10 @@
 
 
 [activation-trigger-pointerevent.html?touch]
-  expected: TIMEOUT
   [Activation through touch pointerevent click]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [activation-trigger-pointerevent.html?pen]
-  expected: TIMEOUT
   [Activation through pen pointerevent click]
-    expected: TIMEOUT
+    expected: FAIL
