--- a/tests/wpt/meta/pointerevents/coalesced_events_attributes_on_redispatch.https.html.ini
+++ b/tests/wpt/meta/pointerevents/coalesced_events_attributes_on_redispatch.https.html.ini
@@ -5,12 +5,10 @@
 
 
 [coalesced_events_attributes_on_redispatch.https.html?pen]
-  expected: TIMEOUT
   [Coalesced list in pointerdown/move/up events]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [coalesced_events_attributes_on_redispatch.https.html?touch]
-  expected: TIMEOUT
   [Coalesced list in pointerdown/move/up events]
-    expected: TIMEOUT
+    expected: FAIL
