--- a/tests/wpt/meta/pointerevents/coalesced_events_attributes_under_load.https.optional.html.ini
+++ b/tests/wpt/meta/pointerevents/coalesced_events_attributes_under_load.https.optional.html.ini
@@ -1,16 +1,13 @@
 [coalesced_events_attributes_under_load.https.optional.html?mouse]
-  expected: TIMEOUT
   [Coalesced pointermoves under load]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [coalesced_events_attributes_under_load.https.optional.html?touch]
-  expected: TIMEOUT
   [Coalesced pointermoves under load]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [coalesced_events_attributes_under_load.https.optional.html?pen]
-  expected: TIMEOUT
   [Coalesced pointermoves under load]
-    expected: TIMEOUT
+    expected: FAIL
