--- a/tests/wpt/meta/pointerevents/mouse-pointer-boundary-events-for-shadowdom.html.ini
+++ b/tests/wpt/meta/pointerevents/mouse-pointer-boundary-events-for-shadowdom.html.ini
@@ -1,4 +1,3 @@
 [mouse-pointer-boundary-events-for-shadowdom.html]
-  expected: TIMEOUT
   [PointerEvent: Verifies that mouse boundary events don't point to shadow-dom]
-    expected: TIMEOUT
+    expected: FAIL
