--- a/tests/wpt/meta/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-event.tentative.html.ini
+++ b/tests/wpt/meta/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-event.tentative.html.ini
@@ -1,3 +1,2 @@
 [get-persistendeviceid-from-pointer-event.tentative.html]
-  [PointerEvent.persistentDeviceId]
-    expected: FAIL
+  expected: ERROR
