--- a/tests/wpt/meta/pointerevents/pointerevent_attributes.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_attributes.html.ini
@@ -6,6 +6,12 @@
   [Test pointer events in an iframe]
     expected: FAIL
 
+  [touch pointerup.fromElement value is null]
+    expected: PRECONDITION_FAILED
+
+  [touch pointerup.toElement value is null]
+    expected: PRECONDITION_FAILED
+
 
 [pointerevent_attributes.html?pen-right-nonstandard]
   expected: ERROR
@@ -52,6 +58,12 @@
   [Test pointer events in an iframe]
     expected: FAIL
 
+  [mouse pointerdown.fromElement value is null]
+    expected: PRECONDITION_FAILED
+
+  [mouse pointerdown.toElement value is null]
+    expected: PRECONDITION_FAILED
+
 
 [pointerevent_attributes.html?pen]
   [Test pointer events in the main document]
@@ -89,6 +101,12 @@
   [Test pointer events in an iframe]
     expected: FAIL
 
+  [mouse pointerdown.fromElement value is null]
+    expected: PRECONDITION_FAILED
+
+  [mouse pointerdown.toElement value is null]
+    expected: PRECONDITION_FAILED
+
 
 [pointerevent_attributes.html?mouse]
   [Test pointer events in the main document]
@@ -111,3 +129,9 @@
 
   [Test pointer events in an iframe]
     expected: FAIL
+
+  [touch pointerup.fromElement value is null]
+    expected: PRECONDITION_FAILED
+
+  [touch pointerup.toElement value is null]
+    expected: PRECONDITION_FAILED
