--- a/tests/wpt/meta/pointerevents/pointerevent_boundary_events_at_implicit_release_hoverable_pointers.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_boundary_events_at_implicit_release_hoverable_pointers.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_boundary_events_at_implicit_release_hoverable_pointers.html]
-  expected: TIMEOUT
+  expected: ERROR
   [mouse Event sequence at implicit release on click]
     expected: NOTRUN
