--- a/tests/wpt/meta/pointerevents/pointerevent_boundary_events_in_capturing.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_boundary_events_in_capturing.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_boundary_events_in_capturing.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [Boundary events around pointer capture and release]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [pointerevent_boundary_events_in_capturing.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [Boundary events around pointer capture and release]
     expected: TIMEOUT
 
 
 [pointerevent_boundary_events_in_capturing.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [Boundary events around pointer capture and release]
-    expected: TIMEOUT
+    expected: FAIL
