--- a/tests/wpt/meta/pointerevents/pointerevent_capture_mouse.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_capture_mouse.html.ini
@@ -6,8 +6,8 @@
   [lostpointercapture event received]
     expected: NOTRUN
 
-  [pointerover event for black rectangle received]
-    expected: NOTRUN
+  [pointermove received for captured element while out of it]
+    expected: FAIL
 
-  [pointerover event for purple rectangle received]
-    expected: NOTRUN
+  [pointermove shouldn't trigger for the purple rectangle while the black rectangle has capture, isPointerCapture=true]
+    expected: FAIL
