--- a/tests/wpt/meta/pointerevents/pointerevent_capture_mouse_and_release_and_capture_again.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_capture_mouse_and_release_and_capture_again.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_capture_mouse_and_release_and_capture_again.html]
+  expected: ERROR
   [A pointerout should be fired on the capturing element after losing the capture]
     expected: FAIL
