--- a/tests/wpt/meta/pointerevents/pointerevent_capture_suppressing_mouse.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_capture_suppressing_mouse.html.ini
@@ -1,7 +1,7 @@
 [pointerevent_capture_suppressing_mouse.html]
-  expected: TIMEOUT
+  expected: ERROR
   [Validate pointer events track pointer movement without pointer capture.]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Test pointer capture.]
-    expected: NOTRUN
+    expected: TIMEOUT
