--- a/tests/wpt/meta/pointerevents/pointerevent_capture_touch_and_release_at_got_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_capture_touch_and_release_at_got_capture.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_capture_touch_and_release_at_got_capture.html]
+  expected: ERROR
   [A pointerout should be fired on the capturing element after losing the capture]
     expected: FAIL
