--- a/tests/wpt/meta/pointerevents/pointerevent_click_during_parent_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_click_during_parent_capture.html.ini
@@ -1,4 +1,5 @@
 [pointerevent_click_during_parent_capture.html?pointerType=touch&preventDefault=pointerdown]
+  expected: ERROR
   [Test in the topmost document: all expected events should be fired]
     expected: FAIL
 
@@ -6,29 +7,35 @@
     expected: FAIL
 
   [Test in the iframe: all expected events should be fired]
+    expected: FAIL
+
+  [Test in the topmost document: "pointerup" event should be fired on expected target]
     expected: FAIL
 
 
 [pointerevent_click_during_parent_capture.html?pointerType=touch&preventDefault=touchstart]
-  [Test in the topmost document: all expected events should be fired]
+  expected: ERROR
+  [Test in the iframe: all expected events should be fired]
     expected: FAIL
 
-  [Test in the iframe: all expected events should be fired]
+  [Test in the topmost document: "pointerup" event should be fired on expected target]
     expected: FAIL
 
 
 [pointerevent_click_during_parent_capture.html?pointerType=touch&preventDefault=]
-  [Test in the topmost document: all expected events should be fired]
-    expected: FAIL
-
+  expected: ERROR
   [Test in the topmost document: "click" event should be fired on expected target]
     expected: FAIL
 
   [Test in the iframe: all expected events should be fired]
     expected: FAIL
 
+  [Test in the topmost document: "pointerup" event should be fired on expected target]
+    expected: FAIL
+
 
 [pointerevent_click_during_parent_capture.html?pointerType=mouse&preventDefault=pointerdown]
+  expected: ERROR
   [Test in the topmost document: all expected events should be fired]
     expected: FAIL
 
@@ -40,6 +47,7 @@
 
 
 [pointerevent_click_during_parent_capture.html?pointerType=mouse&preventDefault=]
+  expected: ERROR
   [Test in the topmost document: all expected events should be fired]
     expected: FAIL
 
