--- a/tests/wpt/meta/pointerevents/pointerevent_click_is_a_pointerevent.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_click_is_a_pointerevent.html.ini
@@ -1,25 +1,25 @@
 [pointerevent_click_is_a_pointerevent.html?pen]
   expected: TIMEOUT
   [click using pen is a PointerEvent with correct properties]
-    expected: TIMEOUT
+    expected: FAIL
 
   [click using pen is a PointerEvent with correct properties when no other PointerEvent listeners are present]
-    expected: NOTRUN
+    expected: FAIL
 
   [click using pen is a PointerEvent with correct properties in a subframe]
-    expected: NOTRUN
+    expected: TIMEOUT
 
 
 [pointerevent_click_is_a_pointerevent.html?touch]
   expected: TIMEOUT
   [click using touch is a PointerEvent with correct properties]
-    expected: TIMEOUT
+    expected: FAIL
 
   [click using touch is a PointerEvent with correct properties when no other PointerEvent listeners are present]
-    expected: NOTRUN
+    expected: FAIL
 
   [click using touch is a PointerEvent with correct properties in a subframe]
-    expected: NOTRUN
+    expected: TIMEOUT
 
 
 [pointerevent_click_is_a_pointerevent.html?mouse]
