--- a/tests/wpt/meta/pointerevents/pointerevent_disabled_form_control.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_disabled_form_control.html.ini
@@ -1,11 +1,11 @@
 [pointerevent_disabled_form_control.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [pen pointerevent attributes]
     expected: NOTRUN
 
 
 [pointerevent_disabled_form_control.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [touch pointerevent attributes]
     expected: NOTRUN
 
