--- a/tests/wpt/meta/pointerevents/pointerevent_element_haspointercapture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_element_haspointercapture.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_element_haspointercapture.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [pointerevent_element_haspointercapture.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [pointerevent_element_haspointercapture.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture]
-    expected: NOTRUN
+    expected: FAIL
