--- a/tests/wpt/meta/pointerevents/pointerevent_element_haspointercapture_release_pending_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_element_haspointercapture_release_pending_capture.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_element_haspointercapture_release_pending_capture.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture test after the pending pointer capture element releases pointer capture]
     expected: NOTRUN
 
 
 [pointerevent_element_haspointercapture_release_pending_capture.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture test after the pending pointer capture element releases pointer capture]
     expected: NOTRUN
 
 
 [pointerevent_element_haspointercapture_release_pending_capture.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [hasPointerCapture test after the pending pointer capture element releases pointer capture]
     expected: NOTRUN
