--- a/tests/wpt/meta/pointerevents/pointerevent_iframe-touch-action-none_touch.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_iframe-touch-action-none_touch.html.ini
@@ -1,4 +1,3 @@
 [pointerevent_iframe-touch-action-none_touch.html]
-  expected: TIMEOUT
   [touch iframe received pointercancel]
-    expected: TIMEOUT
+    expected: FAIL
