--- a/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_for_disconnected_node.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_for_disconnected_node.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_lostpointercapture_for_disconnected_node.html]
-  expected: TIMEOUT
+  expected: ERROR
   [lostpointercapture event received]
     expected: NOTRUN
