--- a/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_for_disconnected_node_in_shadow_dom.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_for_disconnected_node_in_shadow_dom.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_lostpointercapture_for_disconnected_node_in_shadow_dom.html]
-  expected: TIMEOUT
+  expected: ERROR
   [lostpointercapture is dispatched on the document when shadow dom capturing element is removed]
     expected: TIMEOUT
