--- a/tests/wpt/meta/pointerevents/pointerevent_mouse_pointercapture_inactivate_pointer.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_mouse_pointercapture_inactivate_pointer.html.ini
@@ -1,5 +1,5 @@
 [pointerevent_mouse_pointercapture_inactivate_pointer.html]
-  expected: TIMEOUT
+  expected: ERROR
   [setPointerCapture: pointer active in outer frame, set capture to inner frame]
     expected: TIMEOUT
 
