--- a/tests/wpt/meta/pointerevents/pointerevent_movementxy.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_movementxy.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_movementxy.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [mouse pointerevent attributes]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [pointerevent_movementxy.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [touch pointerevent attributes]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [pointerevent_movementxy.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [pen pointerevent attributes]
-    expected: NOTRUN
+    expected: FAIL
