--- a/tests/wpt/meta/pointerevents/pointerevent_pointercapture-in-custom-element.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointercapture-in-custom-element.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_pointercapture-in-custom-element.html]
-  expected: TIMEOUT
+  expected: ERROR
   [PointerCapture works for custom element Shadow DOM.]
     expected: TIMEOUT
