--- a/tests/wpt/meta/pointerevents/pointerevent_pointercapture-in-shadow-dom.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointercapture-in-shadow-dom.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_pointercapture-in-shadow-dom.html]
-  expected: TIMEOUT
+  expected: ERROR
   [PointerCapture works for Shadow DOM element.]
     expected: TIMEOUT
