--- a/tests/wpt/meta/pointerevents/pointerevent_pointercapture-not-lost-in-chorded-buttons.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointercapture-not-lost-in-chorded-buttons.html.ini
@@ -1,5 +1,5 @@
 [pointerevent_pointercapture-not-lost-in-chorded-buttons.html]
-  expected: TIMEOUT
+  expected: ERROR
   [Pointer Events Capture Test - capture not lost due to chorded buttons interaction]
     expected: TIMEOUT
 
