--- a/tests/wpt/meta/pointerevents/pointerevent_pointercapture_in_frame.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointercapture_in_frame.html.ini
@@ -1,31 +1,25 @@
 [pointerevent_pointercapture_in_frame.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [Test touchpointer capture in same-origin frame: Pointer down at inner frame and set pointer capture.]
-    expected: TIMEOUT
-
-  [Test touchpointer capture in same-origin frame: Pointer down at inner frame and set pointer capture to outer frame should not capture.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test touchpointer capture in same-origin frame: Pointer down at outer frame body and set pointer capture.]
-    expected: NOTRUN
-
-  [Test touchpointer capture in same-origin frame: Pointer down at outer frame body and set pointer capture in inner frame should not capture.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test touchpointer capture in same-origin frame: Pointerdown with set capture at inner frame, then release on next pointermove.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test touchpointer capture in same-origin frame: Pointerdown with set capture at outer frame, then release on next pointermove.]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [pointerevent_pointercapture_in_frame.html?mouse]
   expected: TIMEOUT
   [Test mousepointer capture in same-origin frame: Pointer down at inner frame and set pointer capture.]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Test mousepointer capture in same-origin frame: Pointer down at inner frame and set pointer capture to outer frame should not capture.]
-    expected: NOTRUN
+    expected: TIMEOUT
 
   [Test mousepointer capture in same-origin frame: Pointer down at outer frame body and set pointer capture.]
     expected: NOTRUN
@@ -41,21 +35,15 @@
 
 
 [pointerevent_pointercapture_in_frame.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [Test penpointer capture in same-origin frame: Pointer down at inner frame and set pointer capture.]
-    expected: TIMEOUT
-
-  [Test penpointer capture in same-origin frame: Pointer down at inner frame and set pointer capture to outer frame should not capture.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test penpointer capture in same-origin frame: Pointer down at outer frame body and set pointer capture.]
-    expected: NOTRUN
-
-  [Test penpointer capture in same-origin frame: Pointer down at outer frame body and set pointer capture in inner frame should not capture.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test penpointer capture in same-origin frame: Pointerdown with set capture at inner frame, then release on next pointermove.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test penpointer capture in same-origin frame: Pointerdown with set capture at outer frame, then release on next pointermove.]
-    expected: NOTRUN
+    expected: FAIL
