--- a/tests/wpt/meta/pointerevents/pointerevent_pointermove_isprimary_same_as_pointerdown.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointermove_isprimary_same_as_pointerdown.html.ini
@@ -1,10 +1,9 @@
 [pointerevent_pointermove_isprimary_same_as_pointerdown.html?mouse]
   expected: TIMEOUT
   [pointermove has same isPrimary as last pointerdown]
-    expected: NOTRUN
+    expected: TIMEOUT
 
 
 [pointerevent_pointermove_isprimary_same_as_pointerdown.html?touch]
-  expected: TIMEOUT
   [pointermove has same isPrimary as last pointerdown]
-    expected: NOTRUN
+    expected: FAIL
