--- a/tests/wpt/meta/pointerevents/pointerevent_pointermove_on_chorded_mouse_button.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointermove_on_chorded_mouse_button.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_pointermove_on_chorded_mouse_button.html]
   expected: TIMEOUT
   [pointermove events received for button state changes]
-    expected: NOTRUN
+    expected: TIMEOUT
