--- a/tests/wpt/meta/pointerevents/pointerevent_pointerrawupdate_changes_pointer_capture.https.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointerrawupdate_changes_pointer_capture.https.html.ini
@@ -1,4 +1,5 @@
 [pointerevent_pointerrawupdate_changes_pointer_capture.https.html]
+  expected: ERROR
   [Setting pointer capture at `pointerdown` and releasing pointer capture at `pointerrawupdate`]
     expected: FAIL
 
