--- a/tests/wpt/meta/pointerevents/pointerevent_pointerrawupdate_flush_pointercapture.https.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_pointerrawupdate_flush_pointercapture.https.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_pointerrawupdate_flush_pointercapture.https.html]
+  expected: ERROR
   [Pointer capture state should be updated before `pointerrawupdate`]
     expected: FAIL
