--- a/tests/wpt/meta/pointerevents/pointerevent_range_input.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_range_input.html.ini
@@ -17,18 +17,8 @@
 
 
 [pointerevent_range_input.html?touch]
-  expected: TIMEOUT
   [Horizontal drag on a horizontal slider.]
-    expected: TIMEOUT
-
-  [Vertical drag on a horizontal slider.]
-    expected: NOTRUN
-
-  [Vertical drag on a horizontal slider with touch-action:none.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Vertical drag on a vertical slider.]
-    expected: NOTRUN
-
-  [Horizontal drag on a vertical slider.]
-    expected: NOTRUN
+    expected: FAIL
