--- a/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_events_to_original_target.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_events_to_original_target.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_releasepointercapture_events_to_original_target.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [pen got/lost pointercapture: subsequent events to target]
     expected: NOTRUN
 
 
 [pointerevent_releasepointercapture_events_to_original_target.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [mouse got/lost pointercapture: subsequent events to target]
     expected: NOTRUN
 
 
 [pointerevent_releasepointercapture_events_to_original_target.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [touch got/lost pointercapture: subsequent events to target]
     expected: NOTRUN
