--- a/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_invalid_pointerid.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_invalid_pointerid.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_releasepointercapture_invalid_pointerid.html]
-  expected: TIMEOUT
+  expected: ERROR
   [releasePointerCapture: DOMException NotFoundError]
     expected: NOTRUN
