--- a/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_onpointercancel_touch.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_onpointercancel_touch.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_releasepointercapture_onpointercancel_touch.html]
   expected: TIMEOUT
   [pointer capture is released on pointercancel]
-    expected: NOTRUN
+    expected: TIMEOUT
