--- a/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_pointerup_touch.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_pointerup_touch.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_releasepointercapture_pointerup_touch.html]
   expected: TIMEOUT
   [releasePointerCapture on pointerup]
-    expected: NOTRUN
+    expected: TIMEOUT
