--- a/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_release_right_after_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_releasepointercapture_release_right_after_capture.html.ini
@@ -1,16 +1,10 @@
 [pointerevent_releasepointercapture_release_right_after_capture.html?touch]
-  expected: TIMEOUT
-  [Release pointer capture right after setpointercapture]
-    expected: NOTRUN
-
+  expected: ERROR
 
 [pointerevent_releasepointercapture_release_right_after_capture.html?pen]
-  expected: TIMEOUT
-  [Release pointer capture right after setpointercapture]
-    expected: NOTRUN
-
+  expected: ERROR
 
 [pointerevent_releasepointercapture_release_right_after_capture.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [Release pointer capture right after setpointercapture]
     expected: NOTRUN
