--- a/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_override_pending_capture_element.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_override_pending_capture_element.html.ini
@@ -1,16 +1,16 @@
 [pointerevent_setpointercapture_override_pending_capture_element.html?mouse]
-  expected: TIMEOUT
+  expected: ERROR
   [setPointerCapture: override the pending pointer capture element]
     expected: NOTRUN
 
 
 [pointerevent_setpointercapture_override_pending_capture_element.html?pen]
-  expected: TIMEOUT
+  expected: ERROR
   [setPointerCapture: override the pending pointer capture element]
     expected: NOTRUN
 
 
 [pointerevent_setpointercapture_override_pending_capture_element.html?touch]
-  expected: TIMEOUT
+  expected: ERROR
   [setPointerCapture: override the pending pointer capture element]
     expected: NOTRUN
