--- a/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_pointerup_touch.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_pointerup_touch.html.ini
@@ -1,4 +1,3 @@
 [pointerevent_setpointercapture_pointerup_touch.html]
-  expected: TIMEOUT
   [setPointerCapture on pointerup]
-    expected: NOTRUN
+    expected: FAIL
