--- a/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_to_same_element_twice.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_to_same_element_twice.html.ini
@@ -1,4 +1,5 @@
 [pointerevent_setpointercapture_to_same_element_twice.html?pen]
+  expected: ERROR
   [A repeated setPointerCapture call does not redispatch capture events]
     expected: FAIL
 
@@ -7,6 +8,7 @@
 
 
 [pointerevent_setpointercapture_to_same_element_twice.html?mouse]
+  expected: ERROR
   [A repeated setPointerCapture call does not redispatch capture events]
     expected: FAIL
 
@@ -15,6 +17,7 @@
 
 
 [pointerevent_setpointercapture_to_same_element_twice.html?touch]
+  expected: ERROR
   [A repeated setPointerCapture call does not redispatch capture events]
     expected: FAIL
 
