--- a/tests/wpt/meta/pointerevents/pointerlock/pointerevent_getCoalescedEvents_when_pointerlocked.https.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerlock/pointerevent_getCoalescedEvents_when_pointerlocked.https.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_getCoalescedEvents_when_pointerlocked.https.html]
+  expected: ERROR
   [mouse pointermove getCoalescedEvents when lock test]
     expected: FAIL
