--- a/tests/wpt/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
@@ -1,4 +1,3 @@
 [pointerevent_movementxy_with_pointerlock.html]
-  expected: ERROR
   [mouse pointerevent movementX/Y with pointerlock test]
-    expected: NOTRUN
+    expected: FAIL
