--- a/tests/wpt/meta/pointerevents/pointerlock/pointerevent_pointerlock_supercedes_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerlock/pointerevent_pointerlock_supercedes_capture.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_pointerlock_supercedes_capture.html]
+  expected: ERROR
   [mouse no pointercapture while pointerlock]
     expected: FAIL
