--- a/tests/wpt/meta/pointerevents/touch-action-with-swipe-dir-change.html.ini
+++ b/tests/wpt/meta/pointerevents/touch-action-with-swipe-dir-change.html.ini
@@ -1,25 +1,18 @@
 [touch-action-with-swipe-dir-change.html?touch]
-  expected: TIMEOUT
-  [touch-action:auto with right,down swipe]
-    expected: TIMEOUT
-
-  [touch-action:auto with down,right swipe]
-    expected: NOTRUN
-
   [touch-action:pan-x with right,down swipe]
-    expected: NOTRUN
+    expected: FAIL
 
   [touch-action:pan-x with down,right swipe]
-    expected: NOTRUN
+    expected: FAIL
 
   [touch-action:pan-y with right,down swipe]
-    expected: NOTRUN
+    expected: FAIL
 
   [touch-action:pan-y with down,right swipe]
-    expected: NOTRUN
+    expected: FAIL
 
   [touch-action:none with right,down swipe]
-    expected: NOTRUN
+    expected: FAIL
 
   [touch-action:none with down,right swipe]
-    expected: NOTRUN
+    expected: FAIL
