--- a/tests/wpt/meta/pointerevents/pointerevent_click_during_capture.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_click_during_capture.html.ini
@@ -1,4 +1,5 @@
 [pointerevent_click_during_capture.html?mouse-click]
+  expected: ERROR
   [pointerdown/up at child1, no capture]
     expected: FAIL
 
@@ -19,6 +20,7 @@
 
 
 [pointerevent_click_during_capture.html?mouse-auxclick]
+  expected: ERROR
   [pointerdown/up at child1, no capture]
     expected: FAIL
 
