--- a/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_remove_setcapture_node.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_lostpointercapture_remove_setcapture_node.html.ini
@@ -1,4 +1,4 @@
 [pointerevent_lostpointercapture_remove_setcapture_node.html]
-  expected: TIMEOUT
+  expected: ERROR
   [setPointerCapture target removed by lostpointercapture]
     expected: TIMEOUT
