--- a/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_disconnected.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_disconnected.html.ini
@@ -1,4 +1,3 @@
 [pointerevent_setpointercapture_disconnected.html]
-  expected: TIMEOUT
   [setPointerCapture: DOMException InvalidStateError]
-    expected: NOTRUN
+    expected: FAIL
