--- a/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_invalid_pointerid.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_setpointercapture_invalid_pointerid.html.ini
@@ -1,4 +1,3 @@
 [pointerevent_setpointercapture_invalid_pointerid.html]
-  expected: TIMEOUT
   [setPointerCapture: DOMException NotFoundError]
-    expected: NOTRUN
+    expected: FAIL
