--- a/components/servo/Cargo.toml
+++ b/components/servo/Cargo.toml
@@ -73,6 +73,7 @@ webxr = [
 ]
 
 [dependencies]
+accessibility_traits = { workspace = true }
 background_hang_monitor = { path = "../background_hang_monitor" }
 base = { workspace = true }
 bitflags = { workspace = true }
