--- a/components/shared/embedder/Cargo.toml
+++ b/components/shared/embedder/Cargo.toml
@@ -18,6 +18,7 @@ baked-default-resources = []
 gamepad = []
 
 [dependencies]
+accessibility_traits = { workspace = true }
 base = { workspace = true }
 bitflags = { workspace = true }
 cookie = { workspace = true }
