--- a/ports/servoshell/Cargo.toml
+++ b/ports/servoshell/Cargo.toml
@@ -56,6 +56,7 @@ webgpu = ["libservo/webgpu"]
 webxr = ["libservo/webxr"]
 
 [dependencies]
+accessibility_traits = { workspace = true }
 bpaf = { version = "0.9.20", features = ["derive"] }
 cfg-if = { workspace = true }
 crossbeam-channel = { workspace = true }
