fonts: Port macOS font code to use Use `objc2-*` crates
This change moves Servo's macOS font code away from using our homegrown
`core-*` crates and toward the more general-purpose `objc2-*` crates.
Development of these crates is more active and they use automatic code
general to have more complete coverage of the relevant platform APIs. In
addition, this means that it is easier to understand Servo's code if you
are familiar with the platform APIs as the `objc2` crate are a more
direct Rust wrapper over them. In comparison, our wrappers had more
batteries-included behavior that was less flexible.

This change:
 - is the first step toward more flexible font fallback on macOS (#41426)
 - means we can now remove our manually FFI'd font variation code.

Signed-off-by: Martin Robinson <mrobinson@igalia.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,6 +124,10 @@ num-bigint-dig = "0.8"
 num-derive = "0.4.2"
 num-traits = "0.2"
 num_cpus = "1.17.0"
+objc2 = "0.6.3"
+objc2-core-foundation = "0.3.2"
+objc2-core-graphics = "0.3.2"
+objc2-core-text = "0.3.2"
 ocb3 = "0.1.0"
 openxr = "0.20"
 paint_api = { path = "components/shared/paint" }
