--- a/deny.toml
+++ b/deny.toml
@@ -154,6 +154,7 @@ skip = [
     "socket2",
 
     # duplicated by winit
+    "block2",
     "objc2-app-kit",
     "objc2-foundation",
     "objc2",
