--- a/components/fonts/Cargo.toml
+++ b/components/fonts/Cargo.toml
@@ -56,9 +56,10 @@ webrender_api = { workspace = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 byteorder = { workspace = true }
-core-foundation = "0.9"
-core-graphics = "0.23"
-core-text = "20.1"
+objc2 = { workspace = true }
+objc2-core-foundation = { workspace = true }
+objc2-core-graphics = { workspace = true }
+objc2-core-text = { workspace = true }
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 freetype-sys = { workspace = true }
