Enable paint-timing tests.
Signed-off-by: Shubham Gupta <shubham.gupta@chromium.org>

--- a/tests/wpt/include.ini
+++ b/tests/wpt/include.ini
@@ -210,6 +210,8 @@ skip: true
   skip: false
 [page-visibility]
   skip: false
+[paint-timing]
+  skip: false
 [performance-timeline]
   skip: false
 [permissions]
