Add Integration test for PerformancePaintTiming JS API
Signed-off-by: Shubham Gupta <shubham.gupta@chromium.org>

--- a/components/servo/Cargo.toml
+++ b/components/servo/Cargo.toml
@@ -160,6 +160,10 @@ name = "largest_contentful_paint"
 path = "tests/largest_contentful_paint.rs"
 
 [[test]]
+name = "performance_paint_timing"
+path = "tests/performance_paint_timing.rs"
+
+[[test]]
 name = "network_manager"
 
 [[test]]
