--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
           ./mach bootstrap --yes --skip-lints --skip-nextest
       - name: Set LIBCLANG_PATH # This is needed for bindgen in mozangle.
         run: echo "LIBCLANG_PATH=/usr/lib/llvm-14/lib" >> $GITHUB_ENV
+          ./mach bootstrap --skip-lints --skip-nextest
       - name: Compile docs
         run: ./mach doc
         env:
