script: Start implementation of shared attribute processing for iframes
Start with implementing the new algorithms per the spec.
This fixes the case where the load event should be fired,
but only if a src exists and it is about:blank and it is
connected for the very first time.

Part of #31973

Signed-off-by: Tim van der Lippe <tvanderlippe@gmail.com>

--- a/tests/wpt/meta/html/browsers/the-window-object/window-reuse-in-nested-browsing-contexts.tentative.html.ini
+++ b/tests/wpt/meta/html/browsers/the-window-object/window-reuse-in-nested-browsing-contexts.tentative.html.ini
@@ -14,3 +14,8 @@
   [synchronously navigate iframe with initial src == "".]
     expected: FAIL
 
+  [after the first iframe load event, navigate iframe with initial src == "".]
+    expected: FAIL
+
+  [after the first iframe load event, navigate iframe with initial src == "about:blank".]
+    expected: FAIL
