--- a/tests/wpt/meta/xhr/open-url-multi-window-6.htm.ini
+++ b/tests/wpt/meta/xhr/open-url-multi-window-6.htm.ini
@@ -1,3 +1,2 @@
 [open-url-multi-window-6.htm]
-  [XMLHttpRequest: open() in document that is not fully active (but may be active) should throw]
-    expected: FAIL
+  expected: CRASH
