--- a/tests/wpt/meta/IndexedDB/idbobjectstore_put.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_put.any.js.ini
@@ -14,7 +14,7 @@
   [Object store has autoIncrement:true and the key path is an object attribute]
     expected: FAIL
 
-  [put() a record where a value being indexed does not meet the constraints of a valid key]
+  [put() where an index has unique:true specified]
     expected: FAIL
 
 
@@ -34,5 +34,5 @@
   [Object store has autoIncrement:true and the key path is an object attribute]
     expected: FAIL
 
-  [put() a record where a value being indexed does not meet the constraints of a valid key]
+  [put() where an index has unique:true specified]
     expected: FAIL
