--- a/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
@@ -20,6 +20,12 @@
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
     expected: FAIL
 
+  [IDBCursor continue() method with throwing/invalid keys]
+    expected: FAIL
+
+  [IDBCursor update() method with throwing/invalid keys]
+    expected: FAIL
+
 
 [key-conversion-exceptions.any.html]
   [IndexedDB: Exceptions thrown during key conversion]
@@ -38,6 +44,12 @@
     expected: FAIL
 
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
+    expected: FAIL
+
+  [IDBCursor continue() method with throwing/invalid keys]
+    expected: FAIL
+
+  [IDBCursor update() method with throwing/invalid keys]
     expected: FAIL
 
 
