--- a/tests/wpt/meta/IndexedDB/idbobjectstore_add.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_add.any.js.ini
@@ -11,7 +11,7 @@
   [Object store has autoIncrement:true and the key path is an object attribute]
     expected: FAIL
 
-  [add() a record where a value being indexed does not meet the constraints of a valid key]
+  [add() where an index has unique:true specified]
     expected: FAIL
 
 
@@ -28,5 +28,5 @@
   [Object store has autoIncrement:true and the key path is an object attribute]
     expected: FAIL
 
-  [add() a record where a value being indexed does not meet the constraints of a valid key]
+  [add() where an index has unique:true specified]
     expected: FAIL
