fix remaining cangc
Signed-off-by: Ashwin Naren <arihant2math@gmail.com>

--- a/components/script_bindings/codegen/Bindings.conf
+++ b/components/script_bindings/codegen/Bindings.conf
@@ -556,6 +556,7 @@ DOMInterfaces = {
 },
 
 'IDBObjectStore': {
+    'canGc': ['CreateIndex', 'IndexNames'],
     'cx': ['Put', 'Add', 'Delete', 'Clear', 'Get', 'GetKey', 'GetAll', 'GetAllKeys', 'Count', 'OpenCursor', 'OpenKeyCursor', 'KeyPath'],
 },
 
