Revert linux libclang env
Signed-off-by: janeoa <5373400+janeoa@users.noreply.github.com>

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -136,6 +136,9 @@ jobs:
           tool-cache: false
           large-packages: false
           swap-storage: false
+      - name: Set LIBCLANG_PATH env # needed for bindgen in mozangle
+        if: ${{ runner.environment != 'self-hosted' }}
+        run: echo "LIBCLANG_PATH=/usr/lib/llvm-14/lib" >> $GITHUB_ENV
       - name: Setup Python
         if: ${{ runner.environment != 'self-hosted' }}
         uses: ./.github/actions/setup-python
